Fixed visual artifacts in Hyper IDE on CodeMirror editors, that added additional set of scrollbars. (I think)

--- a/media/main.css
+++ b/media/main.css
@@ -1,4 +1,4 @@
-﻿.hyper-ide-container {
+.hyper-ide-container {
     padding-top: 0;
 }
 
@@ -94,6 +94,9 @@
 /* "Tab control" wrapping editor (both tab buttons, and editor surface) */
 .hyper-ide-editor-tab {
     height: 100%;
+}
+.hyper-ide-page-scroll .hyper-ide-editor-tab {
+    overflow: hidden;
 }
 
 /* "Tab control buttons" wrapper */
